RESOLVED FIXED312787
Missing include directives
https://bugs.webkit.org/show_bug.cgi?id=312787
Summary Missing include directives
Jani Hautakangas
Reported 2026-04-20 10:43:42 PDT
Build fails in multiple sites with build-webkit --wpe --cmakeargs="-DENABLE_UNIFIED_BUILDS=OFF"
Attachments
Jani Hautakangas
Comment 1 2026-04-20 10:47:07 PDT
EWS
Comment 2 2026-04-24 01:23:25 PDT
Committed 311932@main (4e4c3bd8416a): <https://commits.webkit.org/311932@main> Reviewed commits have been landed. Closing PR #63130 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-24 01:24:13 PDT
Note You need to log in before you can comment on or make changes to this bug.